// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code output renders correctly 1`] = `
"<Blueprint3.Card elevation={0} interactive={false}>
  <Component className=\\"codeOutput\\">
    display(&#39;&#39;);
  </Component>
</Blueprint3.Card>"
`;

exports[`Empty output renders an empty card 1`] = `
"<Blueprint3.Card elevation={0} interactive={false}>
  &#39;&#39;
</Blueprint3.Card>"
`;

exports[`Error output (no consoleLogs) renders correctly 1`] = `
"<Blueprint3.Card elevation={0} interactive={false}>
  <Component className=\\"errorOutput\\">
    Line &lt;unknown&gt;: Expected , got .
  </Component>
</Blueprint3.Card>"
`;

exports[`Error output (with consoleLogs) renders correctly 1`] = `
"<Blueprint3.Card elevation={0} interactive={false}>
  <Component className=\\"logOutput\\">
    a
    bb
    cccccccccccccccccccccccccccccccc
    d
  </Component>
  <br />
  <Component className=\\"errorOutput\\">
    Line &lt;unknown&gt;: Expected , got .
  </Component>
</Blueprint3.Card>"
`;

exports[`Repl renders correctly 1`] = `
"<div className=\\"Repl\\" style={{...}}>
  <div className=\\"repl-output-parent\\">
    <Output output={{...}} usingSubst={false} />
    <Output output={{...}} usingSubst={false} />
    <Output output={{...}} usingSubst={false} />
    <Output output={{...}} usingSubst={false} />
    <HotKeysEnabled className=\\"repl-input-parent row bp3-card bp3-elevation-0\\" handlers={{...}}>
      <ReplInput handleBrowseHistoryDown={[Function: handleBrowseHistoryDown]} handleBrowseHistoryUp={[Function: handleBrowseHistoryUp]} handleReplValueChange={[Function: handleReplValueChange]} handleReplEval={[Function: handleReplEval]} handleReplOutputClear={[Function: handleReplOutputClear]} output={{...}} replValue=\\"\\" sourceChapter={1} sourceVariant=\\"default\\" externalLibrary=\\"NONE\\" />
    </HotKeysEnabled>
  </div>
</div>"
`;

exports[`Result output (no consoleLogs) renders correctly 1`] = `
"<Blueprint3.Card elevation={0} interactive={false}>
  <Component className=\\"resultOutput\\">
    42
  </Component>
</Blueprint3.Card>"
`;

exports[`Result output (with consoleLogs) renders correctly 1`] = `
"<Blueprint3.Card elevation={0} interactive={false}>
  <Component className=\\"logOutput\\">
    a
    bb
    cccccccccccccccccccccccccccccccc
    d
  </Component>
  <Component className=\\"resultOutput\\">
    42
  </Component>
</Blueprint3.Card>"
`;

exports[`Running output renders correctly 1`] = `
"<Blueprint3.Card elevation={0} interactive={false}>
  <Component className=\\"logOutput\\">
    a
    bb
    cccccccccccccccccccccccccccccccc
    d
  </Component>
</Blueprint3.Card>"
`;
